<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_editor_absoluteX="371dp"
    tools:layout_editor_absoluteY="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".CadetRegistration">

        <TextView
            android:id="@+id/WELCOME"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/welcome_cadet_jai_hind"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.003" />

        <EditText
            android:id="@+id/FirstName"
            android:layout_width="164dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:textColorHint="#546E7A"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/WELCOME" />

        <EditText
            android:id="@+id/SurName"
            android:layout_width="164dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:textColorHint="#546E7A"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/WELCOME" />

        <EditText
            android:id="@+id/FatherName"
            android:layout_width="164dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center"
            android:hint="@string/father_name"
            android:inputType="textPersonName"
            android:textColorHint="#546E7A"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/FirstName" />

        <EditText
            android:id="@+id/MotherName"
            android:layout_width="164dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center"
            android:hint="@string/mother_name"
            android:inputType="textPersonName"
            android:textColorHint="#546E7A"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SurName" />

        <Spinner
            android:id="@+id/statespinner"
            android:layout_width="164dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/FatherName"
            tools:ignore="SpeakableTextPresentCheck" />

        <Spinner
            android:id="@+id/cityspinner"
            android:layout_width="164dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/your_city_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/MotherName" />

        <Spinner
            android:id="@+id/unitspinner"
            android:layout_width="164dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/your_unit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/statespinner" />

        <Spinner
            android:id="@+id/collegespinner"
            android:layout_width="164dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/your_college_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cityspinner" />

        <EditText
            android:id="@+id/AadharNumber"
            android:layout_width="164dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center"
            android:hint="@string/aadhar_number"
            android:inputType="number"
            android:textColorHint="#546E7A"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/unitspinner" />

        <EditText
            android:id="@+id/Nationality"
            android:layout_width="164dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center"
            android:hint="@string/nationality"
            android:inputType="textPersonName"
            android:textColorHint="#546E7A"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/collegespinner" />

        <Button
            android:id="@+id/DOBbtn"
            android:layout_width="164dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/set_dob"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/AadharNumber" />

        <TextView
            android:id="@+id/DateOfBirth"
            android:layout_width="164dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/date_of_birth"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Nationality" />

        <EditText
            android:id="@+id/PinCode"
            android:layout_width="164dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center"
            android:hint="@string/pin_code"
            android:inputType="number"
            android:textColorHint="#546E7A"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DOBbtn" />

        <EditText
            android:id="@+id/ContactNumber"
            android:layout_width="164dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center"
            android:hint="@string/contact_no"
            android:inputType="phone"
            android:textColorHint="#546E7A"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DateOfBirth"
            tools:ignore="SpeakableTextPresentCheck" />

        <Spinner
            android:id="@+id/gender"
            android:layout_width="164dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/your_gender"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/PinCode" />

        <EditText
            android:id="@+id/PostalAddress"
            android:layout_width="164dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center"
            android:hint="@string/postal_address"
            android:inputType="textPostalAddress"
            android:textColorHint="#546E7A"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ContactNumber" />

        <TextView
            android:id="@+id/Enrollment_Year"
            android:layout_width="164dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/enrollment_year"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gender" />

        <Button
            android:id="@+id/registerbtn"
            android:layout_width="164dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Enrollment_Year" />

        <TextView
            android:id="@+id/status"
            android:layout_width="164dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/status_bar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerbtn"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:padding="10dp"
            android:text="@string/your_aadhar_number_will_be_your_username_and_dob_will_be_your_password"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/status" />
        <ImageView
            android:id="@+id/cadetsphoto"
            android:layout_width="164dp"
            android:layout_height="134dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/cadet_s_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/InsertImageButton"
            app:srcCompat="@drawable/photo"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@drawable/photo" />
        <Button
            android:id="@+id/InsertImageButton"
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:text="@string/insert_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/PostalAddress" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

